name:                elblog
version:             0.1.0.0
synopsis:            blog server
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Toby
maintainer:          tobs169@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PSApp, BlogRepo
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , filepath
                     , servant-blaze
                     , directory

  default-language:    Haskell2010

executable elblog-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , elblog
                     , aeson >= 0.8
                     , base
                     , bytestring
                     , directory
                     , http-types
                     , js-jquery
                     , random
                     , servant
                     , servant-docs
                     , servant-server
                     , servant-blaze
                     , text
                     , time
                     , transformers
                     , transformers-compat
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite elblog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , elblog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
